# vs2

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt  vs2.cpp  vs2.cxx
